@@ -119,8 +119,12 @@
     if (any(is.na(z)))
         p[is.na(z)] <- NA
 
-    if (is.null(names(indstat)))
+    if (is.null(names(indstat)) && length(indstat) == 1)
         names(indstat) <- statistic
+    ## $oecosimu cannot be added to a data frame, but this gives
+    ## either an error or a mess
+    if (is.data.frame(ind))
+        ind <- as.list(ind)
     if (!is.list(ind))
         ind <- list(statistic = ind)
     if (method == "custom")
