@@ -4,6 +4,9 @@ VEGAN RELEASE VERSIONS at http://cran.r-project.org/
 
 Version 2.0-6 (opened October 8, 2012)
 
+	* merge 2934 (partial, mc): oecosimu handles nestedfun() returning
+	data.frame. Not merged: checking length of statistic when setting
+	its name.
 	* merge 2384: new FAQ entries.
 	* merge 2383: remove alias to print.wcmdscale.
 	* merge 2374,2376,2378,2382: orditorp gains argument select
